fix: increase spacing between More Info button and going count

--- a/baequest/src/blocks/event.css
+++ b/baequest/src/blocks/event.css
@@ -207,7 +207,7 @@
 }
 
 .event__link {
-  margin-bottom: 7px;
+  margin-bottom: 14px;
   text-align: center;
 }
 
